new code updates

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-        <div class="row time-block" data-index="one" >
+        <div class="row time-block" >
           <div class="col-sm-1 hour">
-           9AM
+           <p>9AM</p>
           </div>
 
           <div class="col-sm-10">
-            <textarea data-time= "9AM" class="description" id="textarea1">Meeting</textarea>
+            <textarea data-time= "9AM" id="textarea1"></textarea>
           </div>
 
           <div class="col-sm-1">
-            <button  data-time= "9AM" class="saveBtn"><i class="fas fa-lock"></i></button>
+            <button  data-time= "9AM" class="saveBtn"></button>
           </div>
 
         </div>
@@ -79,15 +79,15 @@
 
         <div class="row time-block">
           <div class="col-sm-1 hour">
-            <p>12AM</p>
+            <p>12PM</p>
           </div>
 
           <div class="col-sm-10">
-            <textarea data-time= "12AM"></textarea>
+            <textarea data-time= "12PM"></textarea>
           </div>
 
           <div class="col-sm-1">
-            <button data-time= "12AM" class="saveBtn"><i class="fas fa-lock"></i></button>
+            <button data-time= "12PM" class="saveBtn"></button>
           </div>
 
         </div>
@@ -102,7 +102,7 @@
           </div>
 
           <div class="col-sm-1">
-            <button data-time= "1PM" class="saveBtn"><i class="fas fa-lock"></i></button>
+            <button data-time= "1PM" class="saveBtn"></button>
           </div>
 
         </div>
@@ -117,7 +117,7 @@
           </div>
 
           <div class="col-sm-1">
-            <button data-time= "2PM" class="saveBtn"><i class="fas fa-lock"></i></button>
+            <button data-time= "2PM" class="saveBtn"></button>
           </div>
 
         </div>
@@ -132,7 +132,7 @@
           </div>
 
           <div class="col-sm-1">
-            <button data-time= "3PM" class="saveBtn"><i class="fas fa-lock"></i></button>
+            <button data-time= "3PM" class="saveBtn"></button>
           </div>
 
         </div>
@@ -147,7 +147,7 @@
           </div>
 
           <div class="col-sm-1">
-            <button data-time= "4PM" class="saveBtn"><i class="fas fa-lock"></i></button>
+            <button data-time= "4PM" class="saveBtn"></button>
           </div>
 
         </div>
